cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
set (CMAKE_CXX_STANDARD 11)

include_directories(${PROJECT_BINARY_DIR}/src)

add_subdirectory(assembler)

add_library(adjacent_cell adjacent_cell.cc)
add_library(aux aux.cc)
add_library(Bug Bug.cc)
add_library(Cell Cell.cc)
add_library(checkforbugs checkforbugs.cc)
add_library(I_direction I_direction.cc)
add_library(I_drop I_drop.cc)
add_library(I_flip I_flip.cc)
add_library(I_mark I_mark.cc)
add_library(I_move I_move.cc)
add_library(I_pickup I_pickup.cc)
add_library(I_sense I_sense.cc)
add_library(I_turn I_turn.cc)
add_library(I_unmark I_unmark.cc)
add_library(Instruction Instruction.cc)
add_library(Marker Marker.cc)
add_library(Program Program.cc)
add_library(tokenizer tokenizer.cc)
add_library(World World.cc)

